# java-speci

./: README.md  angular.json  package-lock.json  package.json  tailwind.config.js
docs/: 3rdpartylicenses.txt  index.html  main.d2211850055e94c0.js  polyfills.a88fcae0cf80ea8a.js  runtime.91817d3ebfddb039.js  styles.14e36f5cbc0d5ff4.css
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: assessment.rs  category.rs  commands.rs  data.rs  dto.rs  main.rs  question.rs
src-tauri/src/dto/: question_dto.rs
src/app/: app.component.ts  app.module.ts
src/app/app-router/: app-router.module.ts
src/app/components/add-question-form/: add-question-form.component.css  add-question-form.component.html  add-question-form.component.spec.ts  add-question-form.component.ts
src/app/components/category/: category.component.html  category.component.ts
src/app/components/code-panel/: code-panel.component.html  code-panel.component.ts
src/app/components/navigation/: navigation.component.html  navigation.component.ts
src/app/components/question/: question.component.css  question.component.html  question.component.ts
src/app/model/: account.ts  assessment.ts  category.ts  question.ts
src/app/pages/account/: account.component.html  account.component.spec.ts  account.component.ts
src/app/pages/assessment/: assessment.component.html  assessment.component.ts
src/app/pipes/: sort-questions-by-date-added.pipe.spec.ts  sort-questions-by-date-added.pipe.ts
src/app/service/: assessment.service.ts  category.service.ts  question.service.ts
(+10 files in other folders)
