[package]
name = "jav-speci"
version = "0.0.0"
description = "Java Speci is a Java Learning Platform to be used in supplementation with the Java Oracle Specification. This version is based on the Java SE 21 Edition"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-message"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.31.1"
tauri-invoke-http = { git = "https://github.com/tauri-apps/tauri-invoke-http", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
